# DB-Manager

./: Dump20250216.sql  README.md  main.py  pyproject.toml  requirements.txt
sql/: DB.sql  Dump20250227.sql  Dump20250228.sql
src/: main.py
src/config/: __init__.py  app_themes.py
src/database/: __init__.py  db_tables.py
src/setting/: __init__.py  const.py
src/tools/: __init__.py  cryption.py  logging.py  password.py  regex.py  search.py
