[project]
name = "DB_Manager"
version = "2.0.1-beta"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "flet==0.25.2",
  "mysql-connector-python==8.0.33",
  "python-Levenshtein==0.21.1",
  "bcrypt==4.0.1",
  "cryptography==41.0.3"
]


[tool.flet]
org = "com.danhack007"
product = "DB_Manager"
company = "Flet"
copyright = "Copyright (C) 2024 by Flet"

[tool.flet.app]
path = "src"